pfp and mobile alignment fix
peepee

--- a/style/theme2style.css
+++ b/style/theme2style.css
@@ -7,17 +7,29 @@ body {
     overflow-x: hidden;
 }
 .bg{
-    background-repeat: no-repeat;
-    background-position: top;
     color: white;
     filter:blur(200px);
+    text-align: center;
     position: fixed;
-    top: 0;
-    left: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    right: 0%;
     width: 100%;
     height: 100%;
     z-index: -100;
-    opacity: 0.3;
+    animation: 3s ease-in-out infinite background;
+}
+@keyframes background{
+    0%{
+        opacity: 0.1;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 0.1;
+    }
 }
 
 /*Hide Desktop Navigation Menu*/
@@ -161,12 +173,13 @@ body {
 
 .beegtextLessBorder {
     margin-top: 30px;
-    margin-left: 10px;
-    width: 865px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 15px;
 }
 
 .beegtextN {
-    margin-left: 30px;
+    margin-left: 50px;
     text-align: left;
 }
 
@@ -177,6 +190,9 @@ body {
 .beegtextOldN {
     animation: 0.5s ease-out 0s 1 slideUp2;
     text-align: center;
+    margin-left: 2px;
+    align-items: center;
+    justify-content: center;
 }
 
 .pfpNameInfo {
@@ -195,7 +211,7 @@ body {
 }
 
 .palestineNameInfo {
-    margin-left: 100px;
+    margin-left: 30px;
     margin-top: 30px;
     width: 256px;
     height: 128px;
@@ -206,7 +222,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 64px;
-    height: 64px;
+    height: 61px;
     border: 2px solid white;
 }
 
@@ -406,7 +422,7 @@ body {
 
     .pfpImage {
         width: 256px;
-        height: 256px;
+        height: 245px;
         border: 2px solid white;
     }
 
